[tool.poetry]
name = "testing-101"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "testing_101"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
